--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -5,6 +5,8 @@
   <%= select_tag :to_airport_id, options_from_collection_for_select(Airport.all, :id, :code)  %>
   <%= f.label "To" %>
   <%= select_tag :to_airport_id, options_from_collection_for_select(Airport.all, :id, :code)  %>
-  <%= select_tag :flight_date, options_from_collection_for_select(Flight.all, :flight_date, :flight_date) %>
+  <%= select_tag :flight_date, options_from_collection_for_select(Flight.select('DISTINCT flight_date'), :flight_date, :flight_date) %>
+  <%= f.label "Passenger" %>
+  <%= select_tag :num_tickets, options_for_select([['1',1],['2',2],['3',3],['4',4]]) %>
   <%= f.submit "Search" %>
 <% end %>
